--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New-Year</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/style/new-year.css">
+  </head>
+  <body>
+
+
+            <!-- Header section  -->
+
+
+    <header>
+        <nav class=" header">
+      <h1 class="head">All  Thinks Are Possible If You believe</h1>
+        <div>
+          <p class="header-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomized word
+          </p>
+          <button class="btn-primary">Contact Us</button>
+        </div>
+    </nav>
+
+    </header>
+  </body>
 </html>
