--- a/index.html
+++ b/index.html
@@ -55,7 +55,39 @@
         </div>
       </nav>
     </main>
+      
 
+                     <!-- My Plans -->
+
+
+           <main>
+              <nav>
+                <h1 class="my-plans"> My Plans</h1>
+                <div class="plan-container">
+                    <div class="plan">
+                        <img src="./images/icons/ecom.png" alt="">
+                        <p class="plan-title">E-commerce</p>
+                        <p class="plan-description">I want to develop</p>
+                    </div>
+                    <div class="plan">
+                        <img src="./images/icons/smoke.png" alt="">
+                        <p class="plan-title">Smoking Habit</p>
+                        <p class="plan-description">I want to end</p>
+                    </div>
+                    <div class="plan">
+                        <img src="./images/icons/web.png" alt="">
+                        <p class="plan-title">Web Development</p>
+                        <p class="plan-description">I want to start</p>
+                    </div>
+                    <div class="plan">
+                        <img src="./images/icons/js.png" alt="">
+                        <p class="plan-title">Javascript</p>
+                        <p class="plan-description">I want to learn</p>
+                    </div>
+                </div>
+              </nav>
+
+           </main>
 
 
   </body>
