--- a/index.html
+++ b/index.html
@@ -88,6 +88,42 @@
               </nav>
 
            </main>
+            
+                             <!-- image -->
+
+           <main class="img">
+            <div>
+             <h1 class="title-1">Always keep a positive <br>mindset</h1>
+            <button class="btn-primary-1">Call Now</button> 
+            <!-- <img src="./images/gradient1.png" alt=""> -->
+            </div>
+           </main>
+
+            <!-- Bottom -->
+
+            <main>
+                <nav class="bottom">
+                    <div class="bottom-2">
+                    <h1 class="bottom-head">Future</h1>
+                    <p class="description-1">There are many variations of passages of Lorem Ipsum 
+                        available, but the majority have suffered alteration in some 
+                        form, by injected humour, or randomized words</p>
+                    <p class="email">Email : <span style="cursor: pointer;">info@gmail.com</span></p>
+                    <p>Phone : 01500 00 00 00</p>
+                
+                    <img class="img-2" src="./images/icons/fb.png" height="40px" width="40px" alt="">
+                    <img class="ing-3" src="./images/icons/twitter.png" height="40px" width="40px" alt="">
+                    <img src="./images/icons/youtube.png" height="40px" width="40px" alt="">
+                </div>
+                <div class="bottom-3">
+                 <h3 class="bottom-1">Subscribe</h3>
+                 <form  action="">
+                    <input type="email" placeholder="Enter your email">
+                 </form>
+                 <button class="btn-primary-2">Subscribe</button>
+                </div>
+                </nav>
+            </main>
 
 
   </body>
